[tool.poetry]
name = "stackoverflow"
version = "0.1.0"
description = ""
authors = ["Shihabaln <shihab.nasiri@rihal.om>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "notebook"
pandas = "^1.4.0"
seaborn = "^0.11.2"
plotly = "^5.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
